Show message when passkey creation rejected by excluded credential

--- a/src/Core/Resources/Localization/AppResources.ar.resx
+++ b/src/Core/Resources/Localization/AppResources.ar.resx
@@ -2993,4 +2993,7 @@
   <data name="PasskeyOperationFailedBecauseAppCouldNotBeVerified" xml:space="preserve">
     <value>فشلت عملية مفتاح المرور لأنه تعذر التحقق من التطبيق</value>
   </data>
+  <data name="PasskeyAlreadyExistsForThisUser" xml:space="preserve">
+    <value>Passkey already exists for this user</value>
+  </data>
 </root>
