--- a/src/Core/Resources/Localization/AppResources.eu.resx
+++ b/src/Core/Resources/Localization/AppResources.eu.resx
@@ -2991,4 +2991,7 @@ Kontu honetara aldatu nahi duzu?</value>
   <data name="PasskeyOperationFailedBecauseAppCouldNotBeVerified" xml:space="preserve">
     <value>Passkey operation failed because app could not be verified</value>
   </data>
+  <data name="PasskeyAlreadyExistsForThisUser" xml:space="preserve">
+    <value>Passkey already exists for this user</value>
+  </data>
 </root>
