--- a/src/Core/Resources/Localization/AppResources.lv.resx
+++ b/src/Core/Resources/Localization/AppResources.lv.resx
@@ -2993,4 +2993,7 @@ Vai pārslēgties uz šo kontu?</value>
   <data name="PasskeyOperationFailedBecauseAppCouldNotBeVerified" xml:space="preserve">
     <value>Darbība ar piekļuves atslēgu neizdevās, jo lietotni nevarēja apliecināt</value>
   </data>
+  <data name="PasskeyAlreadyExistsForThisUser" xml:space="preserve">
+    <value>Passkey already exists for this user</value>
+  </data>
 </root>
