--- a/src/Core/Resources/Localization/AppResources.sr.resx
+++ b/src/Core/Resources/Localization/AppResources.sr.resx
@@ -2994,4 +2994,7 @@
   <data name="PasskeyOperationFailedBecauseAppCouldNotBeVerified" xml:space="preserve">
     <value>Операција лозинке није успела јер апликација није могла да се верификује</value>
   </data>
+  <data name="PasskeyAlreadyExistsForThisUser" xml:space="preserve">
+    <value>Passkey already exists for this user</value>
+  </data>
 </root>
