--- a/src/Core/Resources/Localization/AppResources.sv.resx
+++ b/src/Core/Resources/Localization/AppResources.sv.resx
@@ -2994,4 +2994,7 @@ Vill du byta till detta konto?</value>
   <data name="PasskeyOperationFailedBecauseAppCouldNotBeVerified" xml:space="preserve">
     <value>Passkey operation failed because app could not be verified</value>
   </data>
+  <data name="PasskeyAlreadyExistsForThisUser" xml:space="preserve">
+    <value>Passkey already exists for this user</value>
+  </data>
 </root>
