--- a/src/Core/Resources/Localization/AppResources.uk.resx
+++ b/src/Core/Resources/Localization/AppResources.uk.resx
@@ -2992,4 +2992,7 @@
   <data name="PasskeyOperationFailedBecauseAppCouldNotBeVerified" xml:space="preserve">
     <value>Не вдалося виконати операцію з ключем доступу, оскільки неможливо перевірити програму</value>
   </data>
+  <data name="PasskeyAlreadyExistsForThisUser" xml:space="preserve">
+    <value>Passkey already exists for this user</value>
+  </data>
 </root>
