--- a/src/Core/Resources/Localization/AppResources.et.resx
+++ b/src/Core/Resources/Localization/AppResources.et.resx
@@ -2992,4 +2992,7 @@ Soovid selle konto peale lülituda?</value>
   <data name="PasskeyOperationFailedBecauseAppCouldNotBeVerified" xml:space="preserve">
     <value>Pääsuvõtme funktsiooni kasutamine ebaõnnestus, sest rakenduse tuvastamine ebaõnnestus</value>
   </data>
+  <data name="PasskeyAlreadyExistsForThisUser" xml:space="preserve">
+    <value>Passkey already exists for this user</value>
+  </data>
 </root>
