--- a/src/Core/Resources/Localization/AppResources.nb.resx
+++ b/src/Core/Resources/Localization/AppResources.nb.resx
@@ -2993,4 +2993,7 @@ Vil du bytte til denne kontoen?</value>
   <data name="PasskeyOperationFailedBecauseAppCouldNotBeVerified" xml:space="preserve">
     <value>Passkey operation failed because app could not be verified</value>
   </data>
+  <data name="PasskeyAlreadyExistsForThisUser" xml:space="preserve">
+    <value>Passkey already exists for this user</value>
+  </data>
 </root>
