--- a/src/Core/Resources/Localization/AppResources.nn.resx
+++ b/src/Core/Resources/Localization/AppResources.nn.resx
@@ -2993,4 +2993,7 @@ Do you want to switch to this account?</value>
   <data name="PasskeyOperationFailedBecauseAppCouldNotBeVerified" xml:space="preserve">
     <value>Passkey-operasjonen feila fordi appen ikkje kunne verifiserast</value>
   </data>
+  <data name="PasskeyAlreadyExistsForThisUser" xml:space="preserve">
+    <value>Passkey already exists for this user</value>
+  </data>
 </root>
