--- a/src/Core/Resources/Localization/AppResources.pt-BR.resx
+++ b/src/Core/Resources/Localization/AppResources.pt-BR.resx
@@ -2993,4 +2993,7 @@ Você deseja mudar para esta conta?</value>
   <data name="PasskeyOperationFailedBecauseAppCouldNotBeVerified" xml:space="preserve">
     <value>Operação de chave de acesso falhou pois o app não pôde ser verificado</value>
   </data>
+  <data name="PasskeyAlreadyExistsForThisUser" xml:space="preserve">
+    <value>Passkey already exists for this user</value>
+  </data>
 </root>
