--- a/src/Core/Resources/Localization/AppResources.zh-Hans.resx
+++ b/src/Core/Resources/Localization/AppResources.zh-Hans.resx
@@ -2992,4 +2992,7 @@
   <data name="PasskeyOperationFailedBecauseAppCouldNotBeVerified" xml:space="preserve">
     <value>由于无法验证应用，通行密钥操作失败</value>
   </data>
+  <data name="PasskeyAlreadyExistsForThisUser" xml:space="preserve">
+    <value>Passkey already exists for this user</value>
+  </data>
 </root>
